--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,13 @@
   "name": "AEHMoviesPWA - wyszukiwarka filmów",
   "icons": [
     {
-      "src": "/favicon.png",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "/icons/f-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/f-512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
