--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
+    "@mui/material-nextjs": "^6.3.1",
     "axios": "^1.7.9",
     "idb": "^8.0.1",
     "next": "15.1.4",
