--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
     "@mui/material-nextjs": "^6.3.1",
+    "@tanstack/react-query": "^5.64.0",
     "axios": "^1.7.9",
     "idb": "^8.0.1",
     "next": "15.1.4",
