--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.1",
     "web-push": "^3.6.7"
   },
   "devDependencies": {
