--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.9",
     "idb": "^8.0.1",
     "next": "15.1.4",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
